@@ -8,7 +8,7 @@
  * See the file "COPYING" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * @(#) $Id: dump-java.c,v 1.2 1999/06/15 18:57:52 strauss Exp $
+ * @(#) $Id: dump-java.c,v 1.3 1999/06/16 15:04:21 strauss Exp $
  */
 
 #include <stdlib.h>
@@ -81,8 +81,8 @@ static char *getUpper(char *s)
 static char *getOidString(SmiNode *smiNode, int importedParent)
 {
     SmiNode	 *parentNode, *node;
-    static char	 s[SMI_MAX_OID+1];
-    char	 append[SMI_MAX_OID+1];
+    static char	 s[200];
+    char	 append[200];
     unsigned int i;
     
     append[0] = 0;
